--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "smart brain backend",
   "main": "smart-brain-server/server.js",
   "scripts": {
-    "start": "nodemon ./smart-brain-server/server.js",
-    "start:dev": "nodemon ./smart-brain-server/server.js",
+    "start": "nodemon server.js",
+    "start:dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
